method getAll and mapper